[gd_scene load_steps=9 format=2]

[ext_resource path="res://Triggers/SaveCab.png" type="Texture" id=1]
[ext_resource path="res://Triggers/Save_Game.gd" type="Script" id=2]
[ext_resource path="res://Triggers/SaveCabG.png" type="Texture" id=3]
[ext_resource path="res://06Sounds/8bit_Sounds/Chirp4.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 10.5 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 10.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SaveCabG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sound:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "SaveScreen"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SaveCabG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Save_Game" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 5.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )

[node name="SaveCabG" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 3 )
anims/SaveScreen = SubResource( 4 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -20.0
pitch_scale = 0.25

[connection signal="body_entered" from="." to="." method="_on_Save_Game_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Save_Game_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
